# multi-dense

./: pyproject.toml
src/multi_dense/: __init__.py  multi_dense.py
tests/: test_multi.py
