[project]
name = "multi-dense"
version = "1.0.0"
description = "A Keras heterogeneous activations layer implementation."
readme = "README.md"
authors = [
    { name = "psantro", email = "psantro@alu.upo.es" }
]
requires-python = ">=3.13"
dependencies = [
    "tensorflow>=2.20.0",
    "types-tensorflow>=2.18.0.20251008",
]

[project.scripts]
multi-dense = "multi_dense:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "uv>=0.9.15",
]
